--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.11.5",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.10",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
