fix: 修改错误单词

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
-  "cSpell.words": ["antd", "coderwhy", "reduxjs", "superadmin", "windyeasy"],
+  "cSpell.words": [
+    "antd",
+    "coderwhy",
+    "realname",
+    "reduxjs",
+    "sider",
+    "superadmin",
+    "wcolumns",
+    "windyeasy"
+  ],
   "cSpell.ignoreWords": ["Appstore"]
 }
