fix: 修复错误单词

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "cSpell.words": [
     "antd",
     "coderwhy",
+    "formname",
     "realname",
     "reduxjs",
+    "reslove",
     "sider",
     "superadmin",
     "wcolumns",
