feat: 添加全屏功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,28 @@
 {
   "cSpell.words": [
+    "aashutoshrathi",
+    "alloc",
+    "ampproject",
     "antd",
+    "axios",
     "btns",
     "Cascader",
+    "classnames",
     "coderwhy",
+    "commitizen",
+    "commitlint",
     "formname",
     "iconify",
+    "jridgewell",
     "nprogress",
     "Popconfirm",
     "realname",
     "reduxjs",
     "reslove",
+    "screenfull",
     "sider",
     "superadmin",
+    "tinycolor",
     "wcolumns",
     "windyeasy"
   ],
