--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^9.3.0",
     "antd": "^5.11.5",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
