feat: 添加统计页面实现基础功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "coderwhy",
     "commitizen",
     "commitlint",
+    "echarts",
     "formname",
     "iconify",
     "jridgewell",
@@ -26,5 +27,5 @@
     "wcolumns",
     "windyeasy"
   ],
-  "cSpell.ignoreWords": ["Appstore"]
+  "cSpell.ignoreWords": ["Appstore", "echars"]
 }
